added flask app

--- a/templates/home.html
+++ b/templates/home.html
@@ -28,19 +28,14 @@
 }
 
 #content {
-    background-image: url("img2.png");
+    background-image: url("https://img.freepik.com/free-photo/composition-cinema-elements-red-background-with-copy-space_23-2148457845.jpg?w=2000");
     background-color: #080f1e;
 }
 
 .footer {
     color: #e4e0e0;
-    display: block;
-    
-    text-align:center;
-    /* position: absolute; */
-    bottom: 0;
-    right: 20px;
-    width: 100%;
+    text-align:right;
+    margin-right: 10%;
 }
 
 .card {
@@ -49,9 +44,9 @@
 
 h1 {
     font-family: 'Netflix Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    color: #e50914;
+    color: #ffffff;
     font-weight: bold;
-    margin-top: 30px;
+    margin-top: 50px;
     }
 
 #autoComplete {
@@ -66,7 +61,13 @@ h1 {
 
 </head>
 <body id="content" style="font-family: 'Noto Sans JP', sans-serif;">
-
+    <header class="footer">
+        <br/> 
+        <div class="social" style="margin-bottom: 8px">
+            <a class="social-icons" href="https://github.com/hiteshwarsingh1" target="_blank"><i class="fa fa-github-alt" style="font-size:24px;color: #e4e0e0"></i></a>
+            <a class="social-icons" href="https://www.linkedin.com/in/hiteshwar-singh-0406571b5/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px;color: #e4e0e0"></i></a>
+        </div>
+    </header>
 
 	<div class="ml-container" style="display: block;">
         <center><h1> Movie Recommendation System</h1></center>
@@ -92,13 +93,7 @@ h1 {
         {% endblock %}
 	</div>
 	
-	<footer class="footer">
-        <br/> 
-        <div class="social" style="margin-bottom: 8px">
-            <a class="social-icons" href="https://github.com/hiteshwarsingh1" target="_blank"><i class="fa fa-github-alt" style="font-size:24px;color: #e4e0e0"></i></a>
-            <a class="social-icons" href="https://www.linkedin.com/in/hiteshwar-singh-0406571b5/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px;color: #e4e0e0"></i></a>
-        </div>
-    </footer>
+	
 </script>
 
 </body>
