--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -89,17 +89,17 @@ margin-bottom: 20px;
 {% if reviews %}
 <h2 style="color:white">USER REVIEWS</h2>
     <div class="col-md-12" style="margin: 50px auto; margin-top:25px">
-        <table class="table table-bordered" bordercolor="white" style="color:white">
+        <table class="table table-bordered" bordercolor="white" style="color:rgb(255, 247, 247)">
             <thead>
                 <tr>
-                    <th class="text-center" scope="col" style="width: 75%">Comments</th>
-                    <th class="text-center" scope="col">Sentiments</th>
+                    <th class="text-center" scope="col" style="width: 75%;background-color:#571421;">Comments</th>
+                    <th class="text-center" scope="col" style="width: 75%;background-color:#571421;">Sentiments</th>
                 </tr>
             </thead>
     
             <tbody>
         {% for review, status in reviews.items() if not reviews.hidden %}
-        <tr style="background-color:#e5091485;">
+        <tr style="background-color:#571421;">
                 <td>{{review}}</td>
                 <td><center>
                     {{status}} : 
